# app/Http/Controllers/Api/SubscriptionApiController.php
@@ -95,4 +95,132 @@ class SubscriptionApiController extends Controller
             ], Response::HTTP_INTERNAL_SERVER_ERROR);
         }
     }
+/**
+ * Update a subscription.
+ *
+ * This endpoint updates an existing subscription based on the provided subscription ID.
+ *
+ * @group Subscriptions
+ * @authenticated
+ * @urlParam id integer required The ID of the subscription to update.
+ * @bodyParam name string required The name of the subscription. Example: "halfed Yearly"
+ * @bodyParam duration string required The duration of the subscription. Example: "30 days"
+ * @bodyParam amount string required The amount of the subscription. Example: "1500"
+ *
+ * @response {
+ *     "message": "subscription updated successfully",
+ *     "data": {
+ *         "id": 17,
+ *         "name": "halfed Yearly",
+ *         "duration": "30 days",
+ *         "amount": "1500",
+ *         "uuid": null,
+ *         "remember_token": null,
+ *         "is_active": 1
+ *     }
+ * }
+ * @response 400 {
+ *     "error": {
+ *         "name": [
+ *             "The name field is required."
+ *         ]
+ *     }
+ * }
+ * @response 401 {
+ *     "error": "Unauthenticated."
+ * }
+ * @response 500 {
+ *     "success": false,
+ *     "message": "Internal Server Error"
+ * }
+ *
+ * @param  \Illuminate\Http\Request  $request
+ * @param  int  $id
+ * @return \Illuminate\Http\JsonResponse
+ */
+
+    public function updateSubscription(Request $request ,$id){
+
+        $validator = Validator::make($request->all(), [
+            'name' => 'required|string',
+            'duration' => 'required|string',
+            'amount' => 'required|string',
+        ]);
+
+        if ($validator->fails()) {
+            return response()->json(['error' => $validator->errors()], 400);
+        }
+
+        DB::beginTransaction();
+        try {
+            $user = Auth::user();
+            if (!$user) {
+                return response()->json(['error' => 'Unauthenticated.'], 401);
+            }
+
+            $subscription = Subscription::find($id);
+            $subscription->name = $request->name;
+            $subscription->duration =$request->duration;
+            $subscription->amount = $request->amount;
+            $subscription->save();
+
+            DB::commit();
+            return response()->json(
+                [
+                    'message' => 'subscription updated successfully',
+                    ' data' => $subscription,
+                ],
+                200
+            );
+        } catch (\Exception $e) {
+            Log::error("#### SubscriptionApiController->updateSubscription #### " . $e->getMessage());
+            return response()->json([
+                'success' => false,
+                'message' => 'Internal Server Error',
+            ], Response::HTTP_INTERNAL_SERVER_ERROR);
+        }
+    }
+
+
+/**
+ * Destroy a subscription.
+ *
+ * This endpoint deletes a subscription associated with the authenticated user.
+ *
+ * @group Subscriptions
+ * @authenticated
+ * @urlParam id integer required The ID of the subscription to be deleted.
+ * @response {
+ *     "status": "Subscription deleted successfully"
+ * }
+ * @response 401 {
+ *     "error": "Unauthenticated."
+ * }
+ * @response 500 {
+ *     "success": false,
+ *     "message": "Internal Server Error"
+ * }
+ *
+ * @param \Illuminate\Http\Request $request
+ * @param int $id
+ * @return \Illuminate\Http\JsonResponse
+ */
+    public function destroySubscription(Request $request,$id){
+        $user = Auth::user();
+        if (!$user) {
+            return response()->json(['error' => 'Unauthenticated.'], 401);
+        }
+        DB::beginTransaction();
+        try {
+            Subscription::where('id', '=', $id)->delete();
+            DB::commit();
+            return response()->json(['status' => 'Subscription deleted successfully']);
+        } catch (\Exception $e) {
+            Log::error("#### AdminAuthController->logout #### " . $e->getMessage());
+            return response()->json([
+                'success' => false,
+                'message' => 'Internal Server Error',
+            ], Response::HTTP_INTERNAL_SERVER_ERROR);
+        }
+    }
 }
